# claude-code-proxy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  auth.py  cli.py  config.example.toml  pyproject.toml
api/: handlers.py
core/: config.py  exceptions.py  headers.py  protocols.py  request_types.py  router.py  sanitize.py  tool_tracker.py  transform.py
core/prompts/: default_system.backup.txt  default_system.txt
core/sanitize/: __init__.py  bash_description.py  edit_tools.py  patterns.py  reminders.py  search_tools.py  system_prompt.py  task_tool.py  tools.py
services/: routing_service.py  targets.py  upstream.py
ui/: dashboard.py  log_utils.py
