[project]
name = "claude-code-proxy"
version = "0.1.0"
description = "Proxy for Claude Code - routes main session to Anthropic (OAuth), subagents to z.ai"
authors = []
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.32.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.0.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
claude-code-proxy = "cli:main"
claude-code-proxy-check = "auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "services", "ui"]
include = ["app.py", "cli.py", "auth.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pyright]
include = ["app.py", "cli.py", "auth.py", "api", "core", "services", "ui"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
